MODUSERS-449 fix code smells
(cherry picked from commit 2d67a2eb884031e9252939b0f50b792f35bb1326)